--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,6 @@ main .instagram-main .instagram-images .instagram-image .panel:hover .icons {
 }
 
 main .instagram-main .instagram-images .instagram-image .panel .eye {
-  z-index: 1;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -193,6 +192,9 @@ main .products-main .products-images {
   -ms-grid-rows: (1fr)[2];
       grid-template-rows: repeat(2, 1fr);
   row-gap: 20px;
+  /* The flip card container - set the width and height to whatever you want. 
+      We have added the border property to demonstrate that the flip itself goes 
+      out of the box on hover (remove perspective if you don't want the 3D effect */
 }
 
 main .products-main .products-images .flip-card {
@@ -203,6 +205,8 @@ main .products-main .products-images .flip-card {
   -webkit-perspective: 1000px;
           perspective: 1000px;
   /* Remove this if you don't want the 3D effect */
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  /* This container is needed to position the front and back side */
 }
 
 main .products-main .products-images .flip-card:hover .flip-card-inner {
@@ -221,6 +225,10 @@ main .products-main .products-images .flip-card .flip-card-inner {
   transition: transform 0.8s, -webkit-transform 0.8s;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
+  /*Specifies that child elements will preserve its 3D position */
+  /* Position the front and back side */
+  /* Style the front side (fallback if image is missing) */
+  /* Style the back side */
 }
 
 main .products-main .products-images .flip-card .flip-card-inner .flip-card-front,
@@ -323,5 +331,140 @@ footer p:nth-of-type(1) {
 
 .active-page {
   font-weight: bolder;
+}
+
+.container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.container article {
+  width: 100%;
+  line-height: 2.5rem;
+  border: 2px solid black;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 14px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 5px 5px 10px -5px rgba(61, 45, 45, 0.75);
+  padding: 10px;
+}
+
+.container article img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (max-width: 1400px) {
+  .wrapper {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  main .products-main .products-images {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  main .products-main .products-images .flip-card {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  header .logo-text {
+    width: 100%;
+  }
+  header nav {
+    width: 100%;
+  }
+  main .employees {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .employees article {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .container {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    width: 90%;
+  }
+  main .products-main .products-images {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer .google-map {
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  header nav ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header nav ul li {
+    margin: 10px;
+  }
+  main .instagram-main .instagram-images {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  main .employees article {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  main .employees article p {
+    width: 100%;
+  }
+  .container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 /*# sourceMappingURL=style.css.map */
