--- a/css/style.scss
+++ b/css/style.scss
@@ -109,7 +109,6 @@ main {
             display: inline;
           }
           .eye {
-            z-index: 1;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -149,23 +148,30 @@ main {
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
       row-gap: 20px;
+      // flip-card from w3school
+      /* The flip card container - set the width and height to whatever you want. 
+      We have added the border property to demonstrate that the flip itself goes 
+      out of the box on hover (remove perspective if you don't want the 3D effect */
       .flip-card {
         background-color: transparent;
         width: 300px;
         height: 300px;
         border: 1px solid #f1f1f1;
         perspective: 1000px; /* Remove this if you don't want the 3D effect */
+        /* Do an horizontal flip when you move the mouse over the flip box container */
         &:hover .flip-card-inner {
           transform: rotateY(180deg);
         }
+        /* This container is needed to position the front and back side */
         .flip-card-inner {
           position: relative;
           width: 100%;
           height: 100%;
           text-align: center;
           transition: transform 0.8s;
-          transform-style: preserve-3d;
+          transform-style: preserve-3d; /*Specifies that child elements will preserve its 3D position */
 
+          /* Position the front and back side */
           .flip-card-front,
           .flip-card-back {
             position: absolute;
@@ -174,10 +180,14 @@ main {
             -webkit-backface-visibility: hidden; /* Safari */
             backface-visibility: hidden;
           }
+
+          /* Style the front side (fallback if image is missing) */
           .flip-card-front {
             background-color: #bbb;
             color: black;
           }
+
+          /* Style the back side */
           .flip-card-back {
             background-color: black;
             color: white;
@@ -245,4 +255,138 @@ footer {
 
 .active-page {
   font-weight: bolder;
+}
+
+// admin page.
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  article {
+    width: 100%;
+    line-height: 2.5rem;
+    border: 2px solid black;
+    border-radius: 10px;
+    -webkit-box-shadow: 5px 5px 14px -9px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 14px -9px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 10px -5px rgba(61, 45, 45, 0.75);
+    padding: 10px;
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .wrapper {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .wrapper {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  main {
+    .products-main {
+      .products-images {
+        grid-template-columns: repeat(2, 1fr);
+        .flip-card {
+          margin: 0 auto;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  header {
+    flex-direction: column;
+    .logo-text {
+      width: 100%;
+    }
+    nav {
+      width: 100%;
+    }
+  }
+  main {
+    .employees {
+      flex-direction: column;
+      article {
+        width: 100%;
+        margin-bottom: 20px;
+      }
+    }
+  }
+
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    width: 90%;
+  }
+
+  main {
+    .products-main {
+      .products-images {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
+
+  footer {
+    flex-direction: column;
+    .google-map {
+      margin-top: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  header {
+    nav {
+      ul {
+        flex-direction: column;
+        align-items: center;
+        li {
+          margin: 10px;
+        }
+      }
+    }
+  }
+
+  main {
+    .instagram-main {
+      .instagram-images {
+        grid-template-columns: 1fr;
+      }
+    }
+    .employees {
+      article {
+        flex-direction: column;
+        align-items: center;
+        p {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .container {
+    grid-template-columns: 1fr;
+  }
 }
