--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -17,6 +21,30 @@ body {
 .wrapper {
   width: 60%;
   margin: 0 auto;
+}
+
+.arrow-down {
+  position: relative;
+}
+
+.arrow-down img {
+  position: absolute;
+  top: -10px;
+  right: 20px;
+  background-color: white;
+  border-radius: 50px;
+}
+
+.arrow-up {
+  position: relative;
+}
+
+.arrow-up img {
+  position: absolute;
+  top: -10px;
+  right: 20px;
+  background-color: white;
+  border-radius: 50px;
 }
 
 header {
@@ -77,6 +105,8 @@ header nav ul li a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .about-section {
@@ -401,6 +431,10 @@ footer p:nth-of-type(1) {
   }
   header nav {
     width: 100%;
+  }
+  main .instagram-main .instagram-images {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
   main .employees {
     -webkit-box-orient: vertical;
