--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -15,6 +20,28 @@ body {
   width: 60%;
   margin: 0 auto;
 }
+
+.arrow-down {
+  position: relative;
+  img {
+    position: absolute;
+    top: -10px;
+    right: 20px;
+    background-color: white;
+    border-radius: 50px;
+  }
+}
+.arrow-up {
+  position: relative;
+  img {
+    position: absolute;
+    top: -10px;
+    right: 20px;
+    background-color: white;
+    border-radius: 50px;
+  }
+}
+
 header {
   width: 90%;
   display: flex;
@@ -58,6 +85,7 @@ header {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    object-fit: cover;
   }
 }
 
@@ -276,6 +304,7 @@ footer {
       margin-left: auto;
       margin-right: auto;
     }
+
     span {
       font-weight: bold;
     }
@@ -324,6 +353,11 @@ footer {
     }
   }
   main {
+    .instagram-main {
+      .instagram-images {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
     .employees {
       flex-direction: column;
       article {
